additional code clean up

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Views served up using AngularJS -->
     <div id="container" class="body-style">
-        <div header-view></div>
+        <div header-view class="header-style"></div>
         <div body-view></div>
     </div>
     <div footer-view></div>
